implement URL parameters and named URLs and name spacing

--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -11,7 +11,8 @@
 <!-- tempalte tages -->
 {% for article in articles %}
 <div class="article">
-  <h2><a href="#">{{ article.title }}</a></h2>
+  <!-- Named URL's and name spacing -->
+  <h2><a href="{% url 'articles:detail' slug=article.slug %}">{{ article.title }}</a></h2>
   <!-- use the model methods -->
   <p>{{ article.snippet }}</p>
 
