--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="{% static 'style.css'%}" />
   </head>
   <body>
-    <div class="wrapper">{% block content %} {% endblock %}</div>
+    <div class="wrapper">
+      <h1><a href="{% url 'articles:list' %}"><img src="{% static 'logo.png' %}" alt=""></a></h1>
+      {% block content %} 
+      {% endblock %}
+    </div>
   </body>
 </html>
