uploading media and create account app and detail detail html

--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -16,7 +16,7 @@
   <!-- use the model methods -->
   <p>{{ article.snippet }}</p>
 
-  <p>{{ article.body }}</p>
+  <!-- <p>{{ article.body }}</p> -->
   <p>{{ article.date }}</p>
 </div>
 {% endfor %} {% endblock %}
