--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -12,9 +12,28 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1><a href="{% url 'articles:list' %}"><img src="{% static 'logo.png' %}" alt=""></a></h1>
-      {% block content %} 
-      {% endblock %}
+      <header class="wrapper">
+        <h1>
+          <a href="{% url 'articles:list' %}"
+            ><img src="{% static 'logo.png' %}" alt="djangonautic"
+          /></a>
+        </h1>
+        <nav>
+          <ul>
+            <li>
+              <form
+                class="logout-link"
+                action="{% url 'accounts:logout' %}"
+                method="post"
+              >
+                {% csrf_token %}
+                <button type="submit">Logout</button>
+              </form>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <div class="wrapper">{% block content %} {% endblock %}</div>
     </div>
   </body>
 </html>
