--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -7,6 +7,7 @@
         <h2>{{ article.title }}</h2>
         <p>{{ article.body }}</p>
         <p>{{ article.date }}</p>
+        <p class="author">added by {{ article.author.username }}</p>
     </div>
 </div>
 {% endblock %}
