--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -1,5 +1,5 @@
 <!-- import static files -->
-{% load static %}
+{% load static from static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,18 +8,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Article List</title>
-    <link rel="stylesheet" href="{% static 'style.css'%}" />
+    <link rel="stylesheet" href="{% static 'styles.css' %}" />
   </head>
+
   <body>
     <div class="wrapper">
       <header class="wrapper">
         <h1>
-          <a href="{% url 'articles:list' %}"
+          <a href="{% url 'home' %}"
             ><img src="{% static 'logo.png' %}" alt="djangonautic"
           /></a>
         </h1>
         <nav>
           <ul>
+            {% if user.is_authenticated %}
             <li>
               <form
                 class="logout-link"
@@ -30,6 +32,11 @@
                 <button type="submit">Logout</button>
               </form>
             </li>
+            <li><a href="{% url 'articles:create' %}">New Article</a></li>
+            {% else %}
+              <li><a href="{% url 'accounts:login' %}"></a>Login</li>
+              <li><a href="{% url 'accounts:signup' %}"></a>Signup</li>
+            {% endif %}
           </ul>
         </nav>
       </header>
